# solana-school

./: .gitignore  README.md  justfile
day_1/: Anchor.toml
day_1/tests/: day_1.ts
day_11/: Anchor.toml  block.md
day_11/programs/day_11/: Cargo.toml
day_11/programs/day_11/src/: lib.rs
day_11/tests/: day_11.ts
day_12/: Anchor.toml  sysvar.md
day_12/tests/: day_12.ts
day_13/: Anchor.toml  package-lock.json  package.json
day_13/tests/: day_13.ts
day_14/: Anchor.toml
day_14/tests/: day_14.ts
day_15/: Anchor.toml
day_15/tests/: day_15.ts
day_16/: Anchor.toml
day_16/tests/: day_16.ts
day_17_full/counter/: Anchor.toml
day_17_full/day_17/: Anchor.toml
day_18_full/read/: Anchor.toml
day_18_full/simple_storage/: Anchor.toml
day_19/: Anchor.toml
day_19/tests/: day_19.ts
day_2/: Anchor.toml
day_2/tests/: day_2.ts
day_20/: Anchor.toml
day_20/tests/: day_20.ts
day_21/: Anchor.toml
day_21/tests/: day_21.ts
day_23/: Anchor.toml
day_23/tests/: day_23.ts
day_24_full/day_24_1/: Anchor.toml
day_24_full/points/: Anchor.toml
day_25/: Anchor.toml
day_25/tests/: day_25.ts
day_26/tests/: day_26.ts
day_26_full/change_owner/: Anchor.toml
day_26_full/crowdfund/: Anchor.toml
day_26_full/day_26/: Anchor.toml
day_27_full/day_27/: Anchor.toml  Cargo.toml
day_27_full/reinit_attack/: Anchor.toml
day_28/: Anchor.toml
day_28/tests/: day_28.ts
day_29/: decoder.py
day_3/: Anchor.toml
day_30/: Anchor.toml
day_31/: Anchor.toml
day_36/: Anchor.toml  package-lock.json
day_4/: Anchor.toml
day_5/: Anchor.toml
(+100 files in other folders)
